force-app/main/default/objects/Deal_Support_Process__c/Deal_Support_Process__c.object-meta.xml
<CustomObject>
    <description>Represents the separate opportunity activities that are necessary to identify additional details of the sale</description>
    <label>Deal Support Process</label>
    <nameField>
        <label>Deal Support Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Support Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>