force-app/main/default/objects/Deal_Support_Process__c/fields/Accelerate_CM_capability__c.field-meta.xml
<CustomField>
    <fullName>Accelerate_CM_capability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accelerate CM capability</label>
    <type>Checkbox</type>
</CustomField>