force-app/main/default/objects/Deal_Support_Process__c/fields/Account_Manager_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Manager Approval Required</label>
    <type>Checkbox</type>
</CustomField>