force-app/main/default/objects/Deal_Support_Process__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Support Processes</relationshipLabel>
    <relationshipName>Deal_Support_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>