force-app/main/default/objects/Deal_Support_Process__c/fields/Active_License_anniversary_dates__c.field-meta.xml
<CustomField>
    <fullName>Active_License_anniversary_dates__c</fullName>
    <label>Active License anniversary dates</label>
    <length>50</length>
    <type>Text</type>
</CustomField>