force-app/main/default/objects/Deal_Support_Process__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Total value of the deal considering quantity and price of the product plus costs incurred when the number of participants exceeds the base number of participants.</description>
    <formula>Quantity__c  *  Price__c + Total_Incremental_Pricing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>