force-app/main/default/objects/Deal_Support_Process__c/fields/Better_manage_my_change_portfolio__c.field-meta.xml
<CustomField>
    <fullName>Better_manage_my_change_portfolio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Better manage my change portfolio</label>
    <type>Checkbox</type>
</CustomField>