force-app/main/default/objects/Deal_Support_Process__c/fields/Build_an_ECM_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Build_an_ECM_Strategy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Build an ECM Strategy</label>
    <type>Checkbox</type>
</CustomField>