force-app/main/default/objects/Deal_Support_Process__c/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From Competitor</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Methodology</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Lack of Budget</fullName>
            </value>
            <value>
                <fullName>Long sales cycle</fullName>
            </value>
            <value>
                <fullName>No Decision-Maker</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>No internal consensus</fullName>
            </value>
            <value>
                <fullName>Different solution at Prosci</fullName>
            </value>
            <value>
                <fullName>Different solution through GAN Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>