force-app/main/default/objects/Deal_Support_Process__c/fields/Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Date__c</fullName>
    <defaultValue>TODAY() + 30</defaultValue>
    <label>Confirmed Date</label>
    <type>Date</type>
</CustomField>