force-app/main/default/objects/Deal_Support_Process__c/fields/Currency_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Currency_Read_Only__c</fullName>
    <description>Read-only representation of the CurrencyIsoCode value</description>
    <formula>TEXT(CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency</label>
    <type>Text</type>
</CustomField>