force-app/main/default/objects/Deal_Support_Process__c/fields/Day_1__c.field-meta.xml
<CustomField>
    <fullName>Day_1__c</fullName>
    <label>Day 1</label>
    <type>Date</type>
</CustomField>