force-app/main/default/objects/Deal_Support_Process__c/fields/Firmex_Account_Contact__c.field-meta.xml
<CustomField>
    <fullName>Firmex_Account_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Firmex Account Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Support Processes</relationshipLabel>
    <relationshipName>Deal_Support_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>