force-app/main/default/objects/Deal_Support_Process__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <referenceTo>pse__Grp__c</referenceTo>
    <relationshipLabel>Deal Support Processes</relationshipLabel>
    <relationshipName>Deal_Support_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>