force-app/main/default/objects/Deal_Support_Process__c/fields/Incremental_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Pricing__c</fullName>
    <description>Represents the price of a training session based on the number of participants that exceeds the base count sourced from the field of the same name on the related Opportunity Product.</description>
    <formula>Opportunity_Product__r.Incremental_Pricing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incremental Pricing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>