force-app/main/default/objects/Deal_Support_Process__c/fields/Initial_Fee__c.field-meta.xml
<CustomField>
    <fullName>Initial_Fee__c</fullName>
    <label>Initial Fee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>