force-app/main/default/objects/Deal_Support_Process__c/fields/Instructor_Type__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Type__c</fullName>
    <label>Instructor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prosci</fullName>
                <default>true</default>
                <label>Prosci US</label>
            </value>
            <value>
                <fullName>Prosci Canada</fullName>
            </value>
            <value>
                <fullName>Prosci Australia</fullName>
            </value>
            <value>
                <fullName>Prosci Europe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>