force-app/main/default/objects/Deal_Support_Process__c/fields/Invoice_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Support Processes (Invoice Contact)</relationshipLabel>
    <relationshipName>Deal_Support_Processes2</relationshipName>
    <type>Lookup</type>
</CustomField>