force-app/main/default/objects/Deal_Support_Process__c/fields/Is_Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Is_Change_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Change Request</label>
    <type>Checkbox</type>
</CustomField>