force-app/main/default/objects/Deal_Support_Process__c/fields/Is_Services_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_Services_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Services Opportunity</label>
    <type>Checkbox</type>
</CustomField>