force-app/main/default/objects/Deal_Support_Process__c/fields/Is_this_a_secondary_license__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_secondary_license__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this a secondary license?</label>
    <type>Checkbox</type>
</CustomField>