force-app/main/default/objects/Deal_Support_Process__c/fields/License_box_Ship_date__c.field-meta.xml
<CustomField>
    <fullName>License_box_Ship_date__c</fullName>
    <label>License box - Ship date</label>
    <type>Date</type>
</CustomField>