force-app/main/default/objects/Deal_Support_Process__c/fields/License_Box_Shirt_Size__c.field-meta.xml
<CustomField>
    <fullName>License_Box_Shirt_Size__c</fullName>
    <label>License Box Shirt Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>XLarge</fullName>
            </value>
            <value>
                <fullName>XXLarge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>