force-app/main/default/objects/Deal_Support_Process__c/fields/License_Version__c.field-meta.xml
<CustomField>
    <fullName>License_Version__c</fullName>
    <label>License Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>