force-app/main/default/objects/Deal_Support_Process__c/fields/Master_Instructor_Lead_Generator__c.field-meta.xml
<CustomField>
    <fullName>Master_Instructor_Lead_Generator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor Lead Generator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Support Processes (Instructor Lead Generator)</relationshipLabel>
    <relationshipName>Deal_Support_Processes1</relationshipName>
    <type>Lookup</type>
</CustomField>