force-app/main/default/objects/Deal_Support_Process__c/fields/Measure_the_impact_of_change__c.field-meta.xml
<CustomField>
    <fullName>Measure_the_impact_of_change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Measure the impact of change</label>
    <type>Checkbox</type>
</CustomField>