force-app/main/default/objects/Deal_Support_Process__c/fields/Minimum_Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Number_of_Participants__c</fullName>
    <description>Represents the minimum number of participants in a purchased training session sourced from the field of the same name on the related Opportunity Product.</description>
    <formula>Opportunity_Product__r.Minimum_Number_of_Participants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Number of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>