force-app/main/default/objects/Deal_Support_Process__c/fields/Non_Guaranteed_ALF__c.field-meta.xml
<CustomField>
    <fullName>Non_Guaranteed_ALF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Guaranteed ALF</label>
    <type>Checkbox</type>
</CustomField>