force-app/main/default/objects/Deal_Support_Process__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Field designated to capture general notes and additional details.</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>