force-app/main/default/objects/Deal_Support_Process__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deal Support Processes</relationshipLabel>
    <relationshipName>Deal_Support_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>