force-app/main/default/objects/Deal_Support_Process__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Opportunity Product</description>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Deal Support Processes</relationshipLabel>
    <relationshipName>Deal_Support_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>