force-app/main/default/objects/Deal_Support_Process__c/fields/Portal_Admin_Contact__c.field-meta.xml
<CustomField>
    <fullName>Portal_Admin_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Admin Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Support Processes (Portal Admin Contact)</relationshipLabel>
    <relationshipName>Deal_Support_Processes3</relationshipName>
    <type>Lookup</type>
</CustomField>