force-app/main/default/objects/Deal_Support_Process__c/fields/Program_Requested_timeframe__c.field-meta.xml
<CustomField>
    <fullName>Program_Requested_timeframe__c</fullName>
    <label>Program Requested timeframe</label>
    <type>TextArea</type>
</CustomField>