force-app/main/default/objects/Deal_Support_Process__c/fields/PSA_days_to_sign__c.field-meta.xml
<CustomField>
    <fullName>PSA_days_to_sign__c</fullName>
    <formula>PSA_Received_signed_PSA__c -  PSA_Generated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSA days to sign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>