force-app/main/default/objects/Deal_Support_Process__c/fields/SOW_Generated__c.field-meta.xml
<CustomField>
    <fullName>SOW_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the generate SOW button is clicked, it checks a box on the opportunity.  Then that field rolls up and counts the number of SOW’s created.</description>
    <label>SOW Generated</label>
    <type>Checkbox</type>
</CustomField>