force-app/main/default/objects/Deal_Support_Process__c/fields/Speaking_Engagement_Details__c.field-meta.xml
<CustomField>
    <fullName>Speaking_Engagement_Details__c</fullName>
    <label>Speaking Engagement Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>