force-app/main/default/objects/Deal_Support_Process__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Dates Pending</fullName>
            </value>
            <value>
                <fullName>Program Rescheduled</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Done - Successful</fullName>
            </value>
            <value>
                <fullName>Closed - Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>