force-app/main/default/objects/Deal_Support_Process__c/fields/Total_Incremental_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Incremental_Price__c</fullName>
    <description>Calculates the Total Incremental Price. If the number of participants exceeds the base number of participants, this formula determines how much the base number is exceeded by and multiplies that difference by the incremental price.</description>
    <formula>IF( of_participants__c &gt; Minimum_Number_of_Participants__c, (of_participants__c - Minimum_Number_of_Participants__c) * Incremental_Price__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Incremental Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>