force-app/main/default/objects/Deal_Support_Process__c/fields/Training_Logistics_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Training_Logistics_Coordinator__c</fullName>
    <label>Training Logistics Coordinator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ali_Semonchick</fullName>
                <label>Ali Semonchick</label>
            </value>
            <value>
                <fullName>Cheryl_Calina</fullName>
                <label>Cheryl Calina</label>
            </value>
            <value>
                <fullName>Dee Zilke</fullName>
            </value>
            <value>
                <fullName>Fallon_Sooley</fullName>
                <label>Fallon Sooley</label>
            </value>
            <value>
                <fullName>Gigi_Nagy</fullName>
                <label>Gigi Nagy</label>
            </value>
            <value>
                <fullName>Gina Tran</fullName>
            </value>
            <value>
                <fullName>Hannah_Savoren</fullName>
                <label>Hannah Savoren</label>
            </value>
            <value>
                <fullName>Leevi Sparks</fullName>
            </value>
            <value>
                <fullName>Lisa Poshusta-Gregory</fullName>
            </value>
            <value>
                <fullName>Mary_Brittenham</fullName>
                <label>Mary Brittenham</label>
            </value>
            <value>
                <fullName>Melissa_Lim</fullName>
                <label>Melissa Lim</label>
            </value>
            <value>
                <fullName>Nicole_Sibley</fullName>
                <label>Nicole Sibley</label>
            </value>
            <value>
                <fullName>Rickie Griffin</fullName>
            </value>
            <value>
                <fullName>Sue_Chaiken</fullName>
                <label>Sue Chaiken</label>
            </value>
            <value>
                <fullName>Wendy_Soulis</fullName>
                <label>Wendy Soulis</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>