force-app/main/default/objects/Deal_Support_Process__c/fields/Trigger_Legal_Notification__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Legal_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Legal Notification</label>
    <type>Checkbox</type>
</CustomField>