force-app/main/default/objects/Deal_Support_Process__c/recordTypes/Advisory.recordType-meta.xml
<RecordType>
    <fullName>Advisory</fullName>
    <active>true</active>
    <label>Advisory</label>
</RecordType>