force-app/main/default/objects/Deal_Support_Process__c/recordTypes/Enterprise_Advisory.recordType-meta.xml
<RecordType>
    <fullName>Enterprise_Advisory</fullName>
    <active>true</active>
    <label>Enterprise Advisory</label>
</RecordType>