force-app/main/default/objects/Deal_Support_Process__c/recordTypes/Enterprise_Licensing.recordType-meta.xml
<RecordType>
    <fullName>Enterprise_Licensing</fullName>
    <active>true</active>
    <label>Enterprise Licensing</label>
</RecordType>