force-app/main/default/objects/Deal_Support_Process__c/recordTypes/Enterprise_Training.recordType-meta.xml
<RecordType>
    <fullName>Enterprise_Training</fullName>
    <active>true</active>
    <label>Enterprise Training</label>
</RecordType>