force-app/main/default/objects/Deal_Support_Process__c/recordTypes/Licensing.recordType-meta.xml
<RecordType>
    <fullName>Licensing</fullName>
    <active>true</active>
    <label>Licensing</label>
</RecordType>